src/app/components/file-viewer/file-viewer.component.scss
:host {
  box-sizing: border-box;
  position: relative;

  flex: 1 0 0;
  display: flex;
  flex-direction: column;
}

.file-viewer-container {
  margin: 0 5px 5px 5px;
  border-radius: 0 0 7px 7px;
  padding: 20px 10px 20px 20px;
  background: azure;
  position: relative;

  flex: 1 0 0;
  box-shadow: inset 0 0 10px 2px #303030;

  color: black;
  display: flex;
  flex-direction: column;
}

.file-content {
  width: 100%;
  display: flex;
  flex-flow: row wrap;
}

:host::ng-deep h1 {
  font-size: 32px;

  padding-bottom: 3px;
  border-bottom: 3px solid #c2185b;
}

